k8s/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: auth-ingress
spec:
    rules:
        - host: 34.118.88.208
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-server
                            port:
                                number: 80
